Fix course box width (#24)
Box on course page had too large width, this fixes that.

--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ nav .user-image-small {
 
 .grid-container-two-columns {
 	display: grid;
-	grid-template-columns: 20% 80%;
+	grid-template-columns: 20% calc(80% - 1.5rem);
 	grid-column-gap: 1.5rem;
 }
 
